--- a/dquadrant/nft/plutus-tokens.cabal
+++ b/dquadrant/nft/plutus-tokens.cabal
@@ -63,8 +63,9 @@ test-suite tokens-test
   main-is: Main.hs
   hs-source-dirs: test
   other-modules:
-    Test.AuctionEndpointTest
-    Test.DirectSaleEndpointTest
+    Test.Wallet.AuctionEndpointTest
+    Test.Wallet.DirectSaleEndpointTest
+    Test.Validator.MarketValidatorTest
     Test.TestHelper
   default-language: Haskell2010
   ghc-options: -Wall -Wnoncanonical-monad-instances
